# templates

./: Cargo.toml  justfile
create/: Cargo.toml
create/src/: config.rs  main.rs
create/src/tpl/: mod.rs  root.rs  templates.rs  tpl.rs
create/templates/: askama.toml
create/templates/src/: lib.rs  main.rs
create/templates/src/tpl/: mod.rs
k8s/services/clash/: Cargo.toml  askama.toml
k8s/services/clash/src/: config.rs  lib.rs  main.rs
k8s/services/clash/src/tpl/: clash.rs  just.rs  mod.rs  root.rs  yacd.rs
k8s/services/clash/templates/: justfile.txt
k8s/services/clash/templates/clash/: deployment.yaml  service.yaml
k8s/services/clash/templates/clash/config/: ports.yaml
k8s/services/clash/templates/yacd/: deployment.yaml  service.yaml
k8s/services/languagetool/: Cargo.toml
k8s/services/languagetool/src/: config.rs  main.rs
k8s/services/languagetool/src/tpl/: languagetool.rs  mod.rs
k8s/services/languagetool/templates/: justfile
k8s/services/languagetool/templates/languagetool/: deployment.yaml  service.yaml
k8s/services/libretranslate/: Cargo.toml
k8s/services/libretranslate/src/: args.rs  config.rs  main.rs
k8s/services/libretranslate/src/tpl/: libretranslate.rs  mod.rs
k8s/services/libretranslate/templates/: justfile
k8s/services/libretranslate/templates/libretranslate/: deployment.yaml  service.yaml
k8s/services/minio/: Cargo.toml  askama.toml
k8s/services/minio/src/: config.rs  lib.rs  main.rs
k8s/services/minio/src/tpl/: minio.rs  mod.rs  root.rs
k8s/services/minio/templates/: justfile
k8s/services/minio/templates/minio/: deployment.yaml  service.yaml
k8s/services/plantuml/: Cargo.toml
k8s/services/plantuml/src/: config.rs  main.rs
k8s/services/plantuml/src/tpl/: mod.rs  plantuml_server.rs
k8s/services/plantuml/templates/: justfile
k8s/services/plantuml/templates/plantuml-server/: deployment.yaml  service.yaml
rust/common/lib/: Cargo.toml
rust/common/lib/src/: config.rs  lib.rs  main.rs
rust/common/lib/src/tpl/: mod.rs  root.rs  src.rs
rust/common/lib/templates/: Cargo.toml
rust/common/template/: Cargo.toml
rust/common/template/src/: args.rs  lib.rs  main.rs
rust/common/template/src/tpl/: root.rs  src.rs  tpl.rs
rust/common/template/templates/: Cargo.toml
rust/common/template/templates/src/: config.rs  main.rs
rust/common/template/templates/src/tpl/: mod.rs
(+6 files in other folders)
