[workspace.package]
edition = "2021"
license = "private content"
homepage = "https://github.com/yjpark/dotnix.private"
repository = "https://github.com/yjpark/dotnix.private"

[workspace]
resolver = "2"
members = [
    "k8s/services/clash",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]

edger_tui_app = { path = "../crates/tui/app", features = [ "config", "template" ] }
# edger_tui_app = { git = "https://github.com/edger-dev/crates", branch = "main", features = [ "config", "template" ] }

askama = { version = "0.12.0", features = [ "serde-yaml" ] }
deref-derive = "0.1.0"
serde = { version = "1.0.163", features = [ "derive" ] }
tracing = "0.1.37"

clap = { version = "4.3.9", features = [ "derive" ] }
