[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/edger-dev/templates"
repository = "https://github.com/edger-dev/templates"

[workspace]
resolver = "2"
members = [
    "rust/common/lib",
    "rust/common/template",
    "k8s/services/clash",
    "k8s/services/minio",
    "k8s/services/plantuml",
    "k8s/services/languagetool",
    "k8s/services/libretranslate",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]

edger_tui_app = { path = "../crates/tui/app", features = [ "config", "template" ] }
# edger_tui_app = { git = "https://github.com/edger-dev/crates", branch = "main", features = [ "config", "template" ] }

askama = { version = "0.12.0", features = [ "serde-yaml" ] }
deref-derive = "0.1.0"
serde = { version = "1.0.163", features = [ "derive" ] }
tracing = "0.1.37"

clap = { version = "4.3.9", features = [ "derive" ] }
