[package]
publish = false
name = "{{ package_name }}"
version = "0.1.0"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edger_tui_app = { workspace = true }

clap = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
deref-derive = { workspace = true }
